[package]
name = "betterls"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
owo-colors = "4.2.1" 
strum = { version = "0.27", features = ["derive"]}
strum_macros = "0.27"
tabled = "0.20.0"
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
